--- a/Profil/Authentist.html
+++ b/Profil/Authentist.html
@@ -32,7 +32,7 @@
                     <li>Favoris</li>
                 </strong>
             </ul>
-            <button>Se déconnecter</button>
+            <button id="sedeco">Se déconnecter</button>
         </div>
 
         <div class="div2">
@@ -76,15 +76,15 @@
                                 <h3>Livraison</h3>
                             </legend>
                             <p>
-                                <label for="pays">Pays</label>
+                                <label for="pays">Pays</label> </br>
                                 <input type="text" name="pays" id="pays" value="France" placeholder="Pays" />
                             </p>
                             <p>
-                                <label for="ville">Ville</label>
+                                <label for="ville">Ville</label> </br>
                                 <input type="text" name="ville" id="ville" value="Paris 2e" placeholder="Ville" />
                             </p>
                             <p>
-                                <label for="adresse">Adresse</label>
+                                <label for="adresse">Adresse</label> </br>
                                 <input type="text" name="adresse" id="adresse" value="1 rue Saint Sauveur"
                                     placeholder="Numéro et Nom de la rue" />
                             </p>
