--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -56,7 +56,7 @@
         </header>
 
         <div class="intro">
-            <img src="../Images/Image_presentation.svg"/>
+            <img src="../Images/Image_presentation.svg" style="width: 20%; padding-right: 70px;"/>
             <h1>La marketplace <b id="violet">d'oeuvres</b> <b id="bleu">authentiques</b> certifiées qui vous fait découvrir des artistes <b id="orange">contemporains</b> sélectionnés avec soin.</h1>
         </div>
 
