--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -106,6 +106,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Favarica.svg"/>
                     <h3>Samuel Favarica</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">41 x 31 x 1 cm</p>
                         <p id="prix">500€</p>
@@ -115,6 +121,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Des_Monstriers.svg"/>
                     <h3>Julien Des Monstriers</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">20 x 40 cm</p>
                         <p id="prix">500€</p>
@@ -124,6 +136,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Coullard.svg"/>
                     <h3>Lauren Coullard</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">74 x 54 cm</p>
                         <p id="prix">1 900€</p>
@@ -133,6 +151,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/The Printer.svg"/>
                     <h3>Math the Printer</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">17 x 23 cm</p>
                         <p id="prix">35€</p>
@@ -149,6 +173,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Guia.svg"/>
                     <h3>Miguel Guia</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">38.5 x 14 x 11.5 cm</p>
                         <p id="prix">980€</p>
@@ -158,6 +188,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Brooksby.svg"/>
                     <h3>Brooksby</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">13 x 13 cm</p>
                         <p id="prix">200€</p>
@@ -167,6 +203,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Levesh.svg"/>
                     <h3>Anna Levesh</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">65 x 45 cm</p>
                         <p id="prix">750€</p>
@@ -176,6 +218,12 @@
                 <div class="tableauDiv">
                     <img src="../Images/Kruhelska.svg"/>
                     <h3>Anne Kruhelska</h3>
+                    <div class="onhover">
+                        <p>"Essence de jeunesse masculine"</p>
+                        <p style="text-decoration: underline;">Sculpture en bronze et métal</p>
+                        <p style="font-weight: bold;">Pièce unique</p>
+                    </div>
+
                     <div id="tableauAlign">
                         <p id="taille">35 x 35 cm</p>
                         <p id="prix">105€</p>
