--- a/Profil/Authentist.html
+++ b/Profil/Authentist.html
@@ -15,11 +15,12 @@
 
     <body>
         <header class="header">
-        
-            <div class="part-left">
-                <img class="logo-auth" src="../Images/Authentist..svg"/> 
-            </div>
-
+            <a href="../homepage/homepage.html">
+                <div class="part-left">
+                    <img class="logo-auth" src="../Images/Authentist..svg"/> 
+                </div>    
+            </a>
+            
             <div class="part-right">
 
                 <div class="part-bottom">
